fixed spacing for Header

--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -1,4 +1,8 @@
 .post-type-archive-product.theme-allure-studio {
+
+  .site-main {
+    margin-top: 2rem;
+  }
   h1,
   p {
     text-align: center;
